[package]
name = "libp2p-community-tor"
version = "0.5.0"
edition = "2021"
license = "MIT"
resolver = "2"
description = "Tor transport for libp2p."
repository = "https://github.com/UnstoppableSwap/libp2p-tor"
authors = ["umgefahren <hannes@umgefahren.xyz>", "наб <nabijaczleweli@nabijaczleweli.xyz>"]

[dependencies]
thiserror = "1.0"
anyhow = "1.0.93"
tokio = "1.41.1"
futures = "0.3"

arti-client = { version = "^0.25", default-features = false, features = ["tokio", "rustls", "onion-service-client", "static-sqlite"] }
tor-interface = { git = "https://github.com/nabijaczleweli/gosling", rev = "32988e5770c12f1b48b865c158509473123eae90", optional = true }
libp2p = { version = "^0.53", default-features = false, features = ["tokio", "tcp", "tls"] }

tor-rtcompat = { version = "^0.25", features = ["tokio", "rustls"] }
tracing = "0.1.40"
tor-hsservice = { version = "^0.25", optional = true }
tor-cell = { version = "^0.25", optional = true }
tor-proto = { version = "^0.25", optional = true }
data-encoding = { version = "2.6.0" }

[dev-dependencies]
libp2p = { version = "0.53", default-features = false, features = ["tokio", "noise", "yamux", "ping", "macros", "tcp", "tls"] }
tokio-test = "0.4.4"
tokio = { version = "1.41.1", features = ["macros"] }
tracing-subscriber = "0.2"

[features]
listen-onion-service = [
    "arti-client/onion-service-service",
    "dep:tor-hsservice",
    "dep:tor-cell",
    "dep:tor-proto"
]
arti-client-tor-provider = ["tor-interface", "tor-interface/arti-client-tor-provider"]
legacy-tor-provider      = ["tor-interface", "tor-interface/legacy-tor-provider"]
mock-tor-provider        = ["tor-interface", "tor-interface/mock-tor-provider"]

[[example]]
name = "ping-onion"
required-features = ["listen-onion-service"]

[[example]]
name = "ping-onion-tor-interface"
required-features = ["tor-interface"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
